@@ -1,3 +1,9 @@
+[B]2.1.5[/B]
+- fixed: Cleanup and factored out Genres to common
+
+[B]2.1.4[/B]
+- fixed: fetching directors and writers due to site changes
+
 [B]2.1.3[/B]
 - fixed: make sure IMDb rating is geting fetched in every region
 
